--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: House Price Prediction
+description: Aayushi Agarwal, Anirudh Heda, Dhruv Gard, Navdha Agarwal, Shruti Patel
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
