--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: House Price Prediction
-description: Aayushi Agarwal, Anirudh Heda, Dhruv Gard, Navdha Agarwal, Shruti Patel
+description: Aayushi Agarwal, Anirudh Heda, Dhruv Garg, Navdha Agarwal, Shruti Patel
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
