--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,3 +3,4 @@ description: Aayushi Agarwal, Anirudh Heda, Dhruv Garg, Navdha Agarwal, Shruti P
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
+markdown: GFM
